Update README.md
Cooja ant run